--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
     implementation "androidx.browser:browser:1.3.0"
+    implementation "com.bartoszlipinski:viewpropertyobjectanimator:1.5.0"
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 //    Exoplayer
 //    implementation 'com.google.android.exoplayer:exoplayer-core:2.15.1'
@@ -53,10 +55,10 @@ dependencies {
 //    implementation 'com.google.android.exoplayer:exoplayer-hls:2.15.1'
 
 //    UI
-    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'nl.joery.animatedbottombar:library:1.1.0'
 //    implementation 'com.alexvasilkov:gesture-views:2.8.2'
     implementation 'com.github.ibrahimsn98:android-particles:2.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
 
 }
