--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.Saikou"
         tools:ignore="AllowBackup" >
         <activity
-            android:name=".media.MediaActivity"
+            android:name=".media.MediaDetailsActivity"
             android:exported="true"
             android:label="@string/title_activity_media"
             android:theme="@style/Theme.Saikou.NoActionBar" />
