--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.14.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
-    implementation "androidx.browser:browser:1.3.0"
+    implementation "androidx.browser:browser:1.4.0"
     implementation "com.bartoszlipinski:viewpropertyobjectanimator:1.5.0"
     implementation 'com.squareup.picasso:picasso:2.71828'
 
@@ -56,4 +56,5 @@ dependencies {
     implementation 'com.alexvasilkov:gesture-views:2.8.2'
     implementation 'com.github.ibrahimsn98:android-particles:2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 }
