--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,13 +47,14 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
 
 //    Exoplayer
-    implementation 'com.google.android.exoplayer:exoplayer-core:2.16.0'
-    implementation 'com.google.android.exoplayer:exoplayer-ui:2.16.0'
-    implementation 'com.google.android.exoplayer:exoplayer-hls:2.16.0'
+//    implementation 'com.google.android.exoplayer:exoplayer-core:2.16.0'
+//    implementation 'com.google.android.exoplayer:exoplayer-ui:2.16.0'
+//    implementation 'com.google.android.exoplayer:exoplayer-hls:2.16.0'
 
 //    UI
     implementation 'nl.joery.animatedbottombar:library:1.1.0'
-    implementation 'com.alexvasilkov:gesture-views:2.8.2'
+    implementation 'com.nambimobile.widgets:expandable-fab:1.2.1'
+//    implementation 'com.alexvasilkov:gesture-views:2.8.2'
     implementation 'com.github.ibrahimsn98:android-particles:2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
