--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     implementation "androidx.browser:browser:1.4.0"
     implementation "com.bartoszlipinski:viewpropertyobjectanimator:1.5.0"
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
 //    Exoplayer
     implementation 'com.google.android.exoplayer:exoplayer-core:2.16.1'
