--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "ani.saikou"
         minSdk 23
         targetSdk 31
-        versionCode 1
-        versionName "1.0.2"
+        versionCode 2
+        versionName "1.0.3"
     }
 
     buildTypes {
@@ -34,17 +34,17 @@ android {
 
 dependencies {
 //    Core
+    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation "androidx.browser:browser:1.4.0"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.fragment:fragment-ktx:1.4.0'
-    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'org.jsoup:jsoup:1.14.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
-    implementation "androidx.browser:browser:1.4.0"
+
     implementation "com.bartoszlipinski:viewpropertyobjectanimator:1.5.0"
-    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
