--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Saikou"
         android:usesCleartextTraffic="true"
+        android:name=".App"
         tools:ignore="AllowBackup">
         <activity
             android:name=".manga.MangaReaderActivity"
@@ -60,6 +61,7 @@
                 <data android:scheme="http"/>
                 <data android:scheme="https"/>
                 <data android:host="anilist.co"/>
+                <data android:host="myanimelist.net"/>
                 <data android:pathPrefix="/anime"/>
                 <data android:pathPrefix="/manga"/>
             </intent-filter>
