--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,10 +43,7 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.14.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
-
-    implementation "com.bartoszlipinski:viewpropertyobjectanimator:1.5.0"
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 //    Exoplayer
     implementation 'com.google.android.exoplayer:exoplayer-core:2.16.1'
